Fix Letter spacing for fonts + Docs improvements (#998)

--- a/docs/app/globals.scss
+++ b/docs/app/globals.scss
@@ -1,7 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import 'https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap';
 
+body {
+  font-family: Inter, sans-serif;
+}
 
 
 
